--- a/ckanext/nhs/fanstatic/sass/theme/_dataset.scss
+++ b/ckanext/nhs/fanstatic/sass/theme/_dataset.scss
@@ -807,10 +807,17 @@ blockquote {
 }
 
 .resource-sidebar {
+    
     li {
         a {
             font-size: 16px;
         }
+    }
+
+    .nav-item {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     .license {
